--- a/package.json
+++ b/package.json
@@ -33,6 +33,12 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
-    ]
+    ],
+    "jest": {
+      "testMatch": [
+        "**/src/**/*.{test,spec}.{js,jsx,ts,tsx}"
+      ]
+    }
   }
+  
 }
